syntax = "proto2";
import "goby/protobuf/option_extensions.proto";
import "dccl/option_extensions.proto";

package goby.util.protobuf;

message GLogConfig
{
    option (dccl.msg).unit_system = "si";
    enum Verbosity
    {
        QUIET = 1;
        WARN = 2;
        VERBOSE = 4;
        DEBUG1 = 5;
        DEBUG2 = 6;
        DEBUG3 = 7;
    }

    optional Verbosity tty_verbosity = 1
        [default = QUIET, (goby.field).description = "Terminal verbosity"];

    optional bool show_gui = 2 [
        default = false,
        (goby.field).description =
            "Set to true to display windowed NCurses GUI for terminal output."
    ];

    message FileLog
    {
        optional string file_name = 1 [
            (goby.field).description =
                "Path to the debug file to write. If 'file_dir' is set, this "
                "field is the path relative to 'file_dir', otherwise it is an "
                "absolute path. The string '%1%' must be present, which will "
                "be replaced by the current UTC date and time. Optionally, "
                "'%2%' will be replaced by the application name.",
            default = "%2%_%1%.txt",
            (goby.field).cfg = { action: ADVANCED }
        ];
        optional string file_dir = 2 [
            (goby.field).description =
                "Directory to store log file in. If not specified, 'file_name' "
                "will be assumed to be an full path to the log file"
        ];

        optional Verbosity verbosity = 3 [
            default = VERBOSE,
            (goby.field).description = "Verbosity for this file log"
        ];

        optional uint32 log_rotate_sec = 4 [
            (goby.field).description =
                "How often to rotate the glog file, in seconds.",
            (dccl.field).units.base_dimensions = "T",
            (goby.field).cfg = { action: ADVANCED }
        ];
    }
    optional FileLog file_log = 3
        [(goby.field).description = "Open a file for (debug) logging."];

    optional bool show_dccl_log = 4
        [default = false, (goby.field).cfg = { action: ADVANCED }];
}
